--- a/Views/CheckOut/Index.cshtml
+++ b/Views/CheckOut/Index.cshtml
@@ -1,96 +1,24 @@
-﻿@*
+﻿@using EcommerceFull.Data;
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor;
+@inject DBLayer DBLayer;
 @{
+    float total = 0;
+    float subTotal = 0;
+    float iva = 0;
+    int userID = Convert.ToInt32(HttpContextAccessor.HttpContext.Session.GetString("UserID"));
+    string paypalClientID = "AflAo-t-7Gt6GHq7oq6rVU8bdywF8fmkWTElnDgCzH2wKCbPFsPBEOp5cCWTKt9ev44e5x_7nPT5IbO0";
+
 }
 <br />
 <br />
 <br />
-<!-- Cart -->
-<div class="wrap-header-cart js-panel-cart">
-    <div class="s-full js-hide-cart"></div>
 
-    <div class="header-cart flex-col-l p-l-65 p-r-25">
-        <div class="header-cart-title flex-w flex-sb-m p-b-8">
-            <span class="mtext-103 cl2">
-                Your Cart
-            </span>
 
-            <div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-cart">
-                <i class="zmdi zmdi-close"></i>
-            </div>
-        </div>
-
-        <div class="header-cart-content flex-w js-pscroll">
-            <ul class="header-cart-wrapitem w-full">
-                <li class="header-cart-item flex-w flex-t m-b-12">
-                    <div class="header-cart-item-img">
-                        <img src="images/item-cart-01.jpg" alt="IMG">
-                    </div>
-
-                    <div class="header-cart-item-txt p-t-8">
-                        <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                            White Shirt Pleat
-                        </a>
-
-                        <span class="header-cart-item-info">
-                            1 x $19.00
-                        </span>
-                    </div>
-                </li>
-
-                <li class="header-cart-item flex-w flex-t m-b-12">
-                    <div class="header-cart-item-img">
-                        <img src="images/item-cart-02.jpg" alt="IMG">
-                    </div>
-
-                    <div class="header-cart-item-txt p-t-8">
-                        <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                            Converse All Star
-                        </a>
-
-                        <span class="header-cart-item-info">
-                            1 x $39.00
-                        </span>
-                    </div>
-                </li>
-
-                <li class="header-cart-item flex-w flex-t m-b-12">
-                    <div class="header-cart-item-img">
-                        <img src="images/item-cart-03.jpg" alt="IMG">
-                    </div>
-
-                    <div class="header-cart-item-txt p-t-8">
-                        <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                            Nixon Porter Leather
-                        </a>
-
-                        <span class="header-cart-item-info">
-                            1 x $17.00
-                        </span>
-                    </div>
-                </li>
-            </ul>
-
-            <div class="w-full">
-                <div class="header-cart-total w-full p-tb-40">
-                    Total: $75.00
-                </div>
-
-                <div class="header-cart-buttons flex-w w-full">
-                    <a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
-                        View Cart
-                    </a>
-
-                    <a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
-                        Check Out
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+<script src="https://www.paypal.com/sdk/js?client-id=@(paypalClientID)&components=YOUR_COMPONENTS"></script>
 
 <!-- breadcrumb -->
 <div class="container">
@@ -106,9 +34,11 @@
     </div>
 </div>
 
+<div id="notification-container">
+</div>
 
 <!-- Shoping Cart -->
-<form class="bg0 p-t-75 p-b-85">
+<form method="post" class="bg0 p-t-75 p-b-85">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
@@ -119,35 +49,51 @@
                                 <th class="column-1">Product</th>
                                 <th class="column-2"></th>
                                 <th class="column-3">Price</th>
-                                <th class="column-4">Quantity</th>
                                 <th class="column-5">Total</th>
                             </tr>
-                            <tr class="table_row">
-                                <td class="column-1">
-                                    <div class="how-itemcart1">
-                                        <img src="~/images/product-01.jpg" alt="IMG">
-                                    </div>
-                                </td>
-                                <td class="column-2">Titulo</td>
-                                <td class="column-3">Preco €</td>
-                                <td class="column-4">
-                                    <div class="wrap-num-product flex-w m-l-auto m-r-0">
-                                        <div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-                                            <i class="fs-16 zmdi zmdi-minus"></i>
-                                        </div>
+                            @if (DBLayer.CartCount(userID) > 0)
+                            {
+                                foreach (var product in DBLayer.GetProducts())
+                                {
+                                    foreach (var cart in DBLayer.GetCart(userID))
+                                    {
+                                        if (product.ProductId == cart.ProductId)
+                                        {
+                                            <tr class="table_row">
+                                                <td class="column-1">
+                                                    <div data-user-id="@userID" class="how-itemcart1">
+                                                        <img src="@cart.ImgUrl" alt="IMG">
+                                                    </div>
+                                                </td>
+                                                <td class="column-2">
+                                                    @cart.Name
+                                                </td>
+                                                <td class="column-3">
+                                                    @cart.Quantity X @cart.Price €
+                                                    @{
+                                                        subTotal = cart.Quantity * cart.Price;
+                                                        total += cart.Quantity * cart.Price;
+                                                    }
+                                                </td>
+                                                <td class="column-5">
+                                                    @subTotal €
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                }
+                            }
+                            else
+                            {
+                                <tr class="table_row">
+                                    <td class="column-2">
+                                        <h4 class="mtext-109 cl2 p-b-30">
+                                            No Products in Cart
+                                        </h4>
+                                    </td>
+                                </tr>
+                            }
 
-                                        <input class="mtext-104 cl3 txt-center num-product" type="number" name="quantidade" value="1">
-
-                                        <div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-                                            <i class="fs-16 zmdi zmdi-plus"></i>
-                                        </div>
-                                    </div>
-                                </td>
-
-                                <td class="column-5">
-                                    1350.00 €
-                                </td>
-                            </tr>
                         </table>
                     </div>
 
@@ -160,9 +106,9 @@
                             </div>
                         </div>
 
-                        <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-                            Update Cart
-                        </div>
+                        <a asp-controller="Shop" asp-action="Index" class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10 update-cart-btn">
+                            Go to Shop
+                        </a>
                     </div>
                 </div>
             </div>
@@ -182,52 +128,8 @@
 
                         <div class="size-209">
                             <span class="mtext-110 cl2">
-                                $79.65
+                                @total €
                             </span>
-                        </div>
-                    </div>
-
-                    <div class="flex-w flex-t bor12 p-t-15 p-b-30">
-                        <div class="size-208 w-full-ssm">
-                            <span class="stext-110 cl2">
-                                Shipping:
-                            </span>
-                        </div>
-
-                        <div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
-                            <p class="stext-111 cl6 p-t-2">
-                                There are no shipping methods available. Please double check your address, or contact us if you need any help.
-                            </p>
-
-                            <div class="p-t-15">
-                                <span class="stext-112 cl8">
-                                    Calculate Shipping
-                                </span>
-
-                                <div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
-                                    <select class="js-select2" name="time">
-                                        <option>Select a country...</option>
-                                        <option>USA</option>
-                                        <option>UK</option>
-                                    </select>
-                                    <div class="dropDownSelect2"></div>
-                                </div>
-
-                                <div class="bor8 bg0 m-b-12">
-                                    <input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="state" placeholder="State /  country">
-                                </div>
-
-                                <div class="bor8 bg0 m-b-22">
-                                    <input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="postcode" placeholder="Postcode / Zip">
-                                </div>
-
-                                <div class="flex-w">
-                                    <div class="flex-c-m stext-101 cl2 size-115 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer">
-                                        Update Totals
-                                    </div>
-                                </div>
-
-                            </div>
                         </div>
                     </div>
 
@@ -240,13 +142,15 @@
 
                         <div class="size-209 p-t-1">
                             <span class="mtext-110 cl2">
-                                $79.65
+                                @total €
                             </span>
+                            <input type="text" hidden name="Total" value="@total"></input>
                         </div>
                     </div>
 
-                    <button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+                    <button asp-action="Sold" asp-route-userId="@userID" asp-route-Total="@total" id="paypal-button-container" class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
                         Proceed to Checkout
+
                     </button>
                 </div>
             </div>
@@ -255,6 +159,8 @@
 </form>
 
 
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
     $('.js-pscroll').each(function () {
@@ -277,4 +183,6 @@
             dropdownParent: $(this).next('.dropDownSelect2')
         });
     })
+
 </script>
+
